--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,3 +45,10 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+  implementation 'com.google.firebase:firebase-auth:21.1.0' // Firebase Auth
+  implementation 'com.google.firebase:firebase-firestore:24.0.0' // Firestore
+}
+
+apply plugin: 'com.google.gms.google-services'
