--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,14 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+  repositories {
+    google()  // Pastikan ini ada
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:7.0.0'
+    classpath 'com.google.gms:google-services:4.3.15' // Versi terbaru
+  }
+}
