--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ environment:
 dependencies:
   http: ^0.13.4
   firebase_storage: ^12.3.7
+  cloud_firestore: ^5.6.2
   firebase_auth: ^5.3.4
-  cloud_firestore: ^5.6.0
   image_picker: ^1.1.2
-  firebase_core: ^3.9.0
+  firebase_core: any
   flutter:
     sdk: flutter
 
@@ -71,6 +71,7 @@ flutter:
     - assets/images/battlefield1.jpg
     - assets/images/sekiro.jpg
     - assets/images/stv.png
+    - assets/images/user.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
